# practice-icp

./: README.md
dfx_wrapper_1/: Cargo.toml
dfx_wrapper_1/src/: main.rs
dfx_wrapper_1/src/commands/: mod.rs
dfx_wrapper_2/: Cargo.toml
dfx_wrapper_2/src/: main.rs
ic-web3-macros/: Cargo.toml
ic-web3-macros/examples/: greet.rs
ic-web3-macros/src/: functions.rs  lib.rs
oracles/: deploy_int_oracles.sh  hardhat.config.ts  package.json
oracles/.openzeppelin/: polygon-mumbai.json
oracles/contracts/: Int128Oracle.sol  Int256Oracle.sol  Int64Oracle.sol  StringOracle.sol  Uint128Oracle.sol  Uint256Oracle.sol  Uint64Oracle.sol
oracles/tasks/deployment/: oracles.ts
oracles/test/: Int128Oracle.ts  Int256Oracle.ts  Int64Oracle.ts  StringOracle.ts  Uint128Oracle.ts  Uint256Oracle.ts  Uint64Oracle.ts
poll/src/poll_backend/: main.mo
simple_e2e/: Cargo.toml  README.md  dfx.json
simple_e2e/artifacts/: counter_motoko.wasm  counter_rust.wasm  hello_rust.wasm  http_outcall_erc20.wasm
simple_e2e/scripts/: build.sh
simple_e2e/tests/: canister_ids.json  package-lock.json  package.json
simple_e2e/tests/src/: actor.js  sample.test.ts
tutorials/custom_greeting/: README.md  package.json  webpack.config.js
tutorials/cycles_hello/: dfx.json
tutorials/linkedup/: dfx.json
tutorials/motoko/access-control/: main.mo
tutorials/multiple_actors/: dfx.json
tutorials/rust/http_outcall/: .env  README.md  dfx.json
tutorials/rust/http_outcall_icweb3/: .env  Cargo.toml  dfx.json
tutorials/rust/my_timers/: .env
tutorials/rust/rust_deps/: .env  dfx.json
tutorials/rust/rust_hello/: .env
tutorials/rust/tx_icweb3/: .env  Cargo.toml  dfx.json
use_ic_wasm/: README.md
use_stable_structure/: Cargo.toml  README.md  dfx.json
use_stable_structure/src/basic_example/: Cargo.toml  basic_example.did
use_stable_structure/src/basic_example/src/: lib.rs
use_stable_structure/src/basic_example_measurement/: Cargo.toml  basic_example_measurement.did
use_stable_structure/src/basic_example_measurement/src/: lib.rs
use_stable_structure/src/custom_example/: Cargo.toml  custom_example.did
use_stable_structure/src/custom_example/src/: lib.rs
use_stable_structure/src/measurement/: Cargo.toml  measurement.did
use_stable_structure/src/measurement/src/: lib.rs
use_stable_structure/src/string_example/: Cargo.toml  string_example.did
use_stable_structure/src/string_example/src/: lib.rs
use_stable_structure/src/use_stable_structure_backend/: Cargo.toml
various/icrc1_transfer/: .gitignore  README.md  dfx.json  setup.sh
various/unittest/: .gitignore  dfx.json
with-uniswap/contracts/: .env.template  README.md  hardhat.config.ts
with-uniswap/synchronizers/: .env  Cargo.toml  README.md  deploy.sh  dfx.json
with-uniswap/synchronizers_v2/: .env  Cargo.toml  deploy.sh  dfx.json
with-uniswap/synchronizers_v3/: .env  .gitignore  Cargo.toml  README.md  dfx.json
ws_agent/agent-cs-pj/: .gitignore  Cargo.toml
ws_agent/agent-cs-pj/src/: main.rs
ws_agent/agent_1/: Cargo.toml
ws_candid/candid_type_1/: Cargo.toml
ws_candid_func/: Cargo.toml  README.md  dfx.json
ws_candid_parser/: Cargo.toml
ws_candid_parser/assets/: app.did
ws_candid_parser/src/: main.rs
ws_candid_parser/src/snapshots/: ws_candid_parser__tests__actor_from_file.snap  ws_candid_parser__tests__compile_from_file_2.snap  ws_candid_parser__tests__compile_from_text.snap  ws_candid_parser__tests__env_from_file.snap
ws_canister_status/: README.md  dfx.json
ws_chainsight/: .env.example  .gitignore  codegen.ts  package-lock.json  package.json  tsconfig.json
ws_chainsight/resources/: schema.graphql
ws_chainsight/src/: common.ts  index.ts
ws_dfx/agent_rs_wrapper/: .gitignore  Cargo.toml
ws_dfx/agent_rs_wrapper/src/: config.rs  dfx_wrapper.rs  main.rs  types.rs
ws_dfx/agent_rs_wrapper/src/distributed/: README.md
ws_dfx/component_agent_wrapper/: Cargo.toml
ws_dfx/dfx_bin_wrapper/: Cargo.toml
ws_dfx/dfx_wrapper_1/: .gitignore
ws_dfx/dfx_wrapper_2/: Cargo.toml
ws_docker/: Dockerfile.dfx_base  Dockerfile.dfx_pj  README.md  script_dfx_new.exp
ws_docker/project/: package.json
ws_docker_2/: Dockerfile  Dockerfile.native  Dockerfile.with_ic-wasm  README.md
ws_docker_2/docker/: .gitignore  Dockerfile.base  Dockerfile.origin  Dockerfile.pj  README.md  docker-compose.yml
ws_docker_2/host/: dfx.json  package-lock.json  package.json
ws_http_request/: README.md  dfx.json
ws_http_request/src/backend/: Cargo.toml  interface.did
ws_http_request/src/backend/src/: lib.rs
ws_ic-cdk/: Cargo.toml
ws_ic-cdk/src/: main.rs
ws_install_code/: .env  .gitignore  Cargo.toml  Makefile  README.md  dfx.json
ws_install_code_2/: .env  Cargo.toml  Makefile  dfx.json
ws_lightic/: package.json  tsconfig.json
ws_lightic/modules/: index.md
ws_lightic/tests/: example.test.ts  simple.test.ts
ws_proxy/with_proxy_1/: Cargo.toml  README.md  caller_impl.did  dfx.json
ws_proxy/with_proxy_1/src/callee_impl/: Cargo.toml  callee_impl.did
ws_proxy/with_proxy_1/src/callee_impl/src/: lib.rs
ws_proxy/with_proxy_1/src/caller_impl/: Cargo.toml  caller_impl.did
ws_proxy/with_proxy_1/src/caller_impl/src/: lib.rs
ws_proxy/with_proxy_1/src/with_proxy_1_backend/: Cargo.toml
ws_shell_1/: Cargo.toml  README.md  dfx.json
ws_shell_1/scripts/: entrypoint.sh  utils.sh
ws_stable_memory/: .env  Cargo.toml  Makefile  README.md
ws_stable_memory/stable_memory_1/: .gitignore  dfx.json
ws_stable_memory/stable_memory_2/: README.md
ws_stable_memory/stable_memory_4/: .gitignore  Cargo.toml  README.md  dfx.json
ws_stable_memory/stable_memory_4/src/backend_btreemap_2/: Cargo.toml  interface.did
ws_stable_memory/stable_memory_4/src/backend_btreemap_2/src/: lib.rs
ws_stable_memory_2/: Cargo.toml  dfx.json
ws_stable_memory_3/: Cargo.toml  README.md  canister_ids.json  dfx.json  execute.sh
ws_stable_memory_3/src/backend_1/: Cargo.toml  interface.did
ws_stable_memory_3/src/backend_1/src/: lib.rs
ws_stable_memory_3/src/ws_stable_memory_3_backend/: Cargo.toml
ws_timer/: Cargo.toml  README.md  dfx.json
(+323 files in other folders)
