[package]
name = "dfx_wrapper_1"
version = "1.0.0"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dfx-core = { git = "https://github.com/dfinity/sdk", package = "dfx-core" }
# dfx-core = { git = "https://github.com/dfinity/sdk", tag="0.19.0", package = "dfx-core" }
# dfx-core = { path = "../../../dfinity/sdk-0.19.0", package = "dfx-core" }
# dfx-core = { path = "../../../dfinity/sdk-0.19.0/src/dfx-core" }

# dfx-core = { git = "https://github.com/linnefromice/dfinity-sdk", branch = "feature/dfx-lib-0.19.0", rev =  "7abd6aebaf73c8d9069eeba3f1e74dc322d67a07" }
# dfx = { git = "https://github.com/linnefromice/dfinity-sdk", branch = "feature/dfx-lib-0.19.0", rev = "7abd6aebaf73c8d9069eeba3f1e74dc322d67a07" }
dfx-core = { git = "https://github.com/linnefromice/dfinity-sdk", rev =  "7abd6aebaf73c8d9069eeba3f1e74dc322d67a07" }
dfx = { git = "https://github.com/linnefromice/dfinity-sdk", rev = "7abd6aebaf73c8d9069eeba3f1e74dc322d67a07" }


ic-agent = { git = "https://github.com/dfinity/agent-rs.git", rev = "c3b7ad562f5d3baaead08e6439fd74018afb7e43" }
ic-utils = { git = "https://github.com/dfinity/agent-rs.git", rev = "c3b7ad562f5d3baaead08e6439fd74018afb7e43" }

anyhow = "1.0.56"
keyring = "1.2.0"
slog = "2.7.0"
tokio = { version = "1.37.0", features = ["full"] }
