[package]
name = "dfx_wrapper_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfx-core = { git = "https://github.com/dfinity/sdk", package = "dfx-core" }
ic-agent = "0.35.0"
ic-utils = "0.35.0"
tokio = { version = "1.37.0", features = ["full"] }
