[package]
name = "ws_candid_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candid = { version = "0.9.11", features = ["parser"] }
ic-cdk = "0.11.3"
insta = "1.34.0"
serde = "1.0.189"
