[workspace]
members = [
    "src/backend_1"
]
resolver = "2"

[workspace.dependencies]
candid = "^0.9.6"
ic-cdk = "^0.11"
ic-cdk-macros = "^0.8"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"

chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "d7e0049abf99ff5c5a390294264ecbf7c3699831" }
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "d7e0049abf99ff5c5a390294264ecbf7c3699831" }
