[package]
name = "agent_rs_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
candid = "0.10.4"
hex = "0.4.3"
ic-agent = "0.35.0"
ic-utils = "0.35.0"
ic-wasm = "0.7.2"
keyring = "2.3.3"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
